@@ -4,11 +4,15 @@
 
 # This file is the official location of the current YARP version number.
 
-SET(YARP_VERSION_MAJOR "2")
-SET(YARP_VERSION_MINOR "3")
-SET(YARP_VERSION_PATCH "0")
-SET(YARP_VERSION_MODIFIER "")
+set(YARP_VERSION_MAJOR "2")
+set(YARP_VERSION_MINOR "3")
+set(YARP_VERSION_PATCH "0")
+set(YARP_VERSION_MODIFIER "")
+set(YARP_VERSION_ABI "0")
 
 set(CPACK_PACKAGE_VERSION_MAJOR "${YARP_VERSION_MAJOR}")
 set(CPACK_PACKAGE_VERSION_MINOR "${YARP_VERSION_MINOR}")
 set(CPACK_PACKAGE_VERSION_PATCH "${YARP_VERSION_PATCH}${YARP_VERSION_MODIFIER}")
+
+set(YARP_GENERIC_VERSION "${YARP_VERSION_MAJOR}.${YARP_VERSION_MINOR}.${YARP_VERSION_PATCH}")
+set(YARP_GENERIC_SOVERSION "${YARP_VERSION_ABI}")
